# scrstudio

./: .gitignore  .gitmodules  README.md  pixi.toml  prepare_dataset.py  pyproject.toml
docs/: data_conventions.md
scrstudio/configs/: base_config.py  config_utils.py  experiment_config.py  method_configs.py
scrstudio/data/: samplers.py
scrstudio/data/datamanagers/: base_datamanager.py  glbuffer_datamanager.py
scrstudio/data/datasets/: camloc_dataset.py
scrstudio/data/utils/: readers.py
scrstudio/encoders/: ace_encoder.py  base_encoder.py  dedode_encoder.py  loftr_encoder.py  netvlad.py  pca_encoder.py
scrstudio/engine/: callbacks.py  optimizers.py  schedulers.py  trainer.py
scrstudio/model_components/: losses.py  mlp.py
scrstudio/models/: base_model.py  scrfacto.py
scrstudio/pipelines/: base_pipeline.py  node2vec_pipeline.py
scrstudio/scripts/: encoding_pca.py  eval.py  overlap_score.py  process_data.py  retrieval_feat.py  train.py
scrstudio/scripts/completions/: install.py
scrstudio/scripts/downloads/: aachen.py  download_data.py  naver_lab.py  utils.py
scrstudio/utils/: decorators.py  install_checks.py  io.py  poses.py  printing.py  profiler.py  scripts.py  writer.py
